<?xml version="1.0" encoding="utf-8"?>

<!--<ImageView-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:src="@drawable/ic_safenotes"-->
<!--    />-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appTheme"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/welcomeCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="25dp"
        android:outlineSpotShadowColor="@color/appShadow"
        app:cardCornerRadius="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/welcomeText"
                android:textAlignment="center"
                android:textSize="30sp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:outlineSpotShadowColor="@color/appShadow"
        android:splitMotionEvents="true"
        app:cardBackgroundColor="@color/appCardStart"
        app:cardCornerRadius="30dp"
        app:cardElevation="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/appNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amsterdam"
                android:text="@string/app_name"
                android:textColor="@color/appShadow"
                android:textStyle="bold"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewStart"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:outlineSpotShadowColor="@color/appShadow"
        app:cardBackgroundColor="@color/appCardStart"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/userNameFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/enterYourFirst"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/userNameLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userNameFirst"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:hint="@string/enterYourLast"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:maxLines="1"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/nextPageFromStart"
        android:textAlignment="center" />


</RelativeLayout>